forgot-password.html

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>استرجاع كلمة المرور | Lizfar DZ</title>
+  <title>نسيت كلمة المرور | Lizfar DZ</title>
 
-  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap');
@@ -15,14 +14,13 @@
       background-image: radial-gradient(circle at 10% 10%, rgba(255,255,255,0.03), transparent 2%),
                         radial-gradient(circle at 90% 90%, rgba(255,255,255,0.02), transparent 2%),
                         linear-gradient(120deg, rgba(255,255,255,0.03), transparent 10%);
-      background-blend-mode: overlay;
     }
     input {
-      background-color: rgba(255,255,255,0.08);
-      border: 1px solid rgba(255,255,255,0.1);
+      background-color: rgba(255,255,255,0.12);
+      border: 1px solid rgba(255,255,255,0.15);
       color: white;
     }
-    input::placeholder { color: rgba(255,255,255,0.4); }
+    input::placeholder { color: rgba(255,255,255,0.6); }
   </style>
 </head>
 
@@ -34,53 +32,119 @@
     <h1 class="text-2xl font-semibold mr-3">Lizfar DZ</h1>
   </div>
 
-  <!-- Forgot Password Box -->
+  <!-- Reset Box -->
   <div class="w-full max-w-md bg-white/10 backdrop-blur-sm rounded-2xl p-8 shadow-xl">
-    <h2 class="text-xl font-semibold mb-6 text-center">استرجاع كلمة المرور</h2>
+    <h2 class="text-xl font-semibold mb-6 text-center">إعادة تعيين كلمة المرور</h2>
 
-    <p class="text-sm text-gray-300 mb-4 text-center">
-      أدخل بريدك الإلكتروني أو رقم هاتفك وسنرسل لك رابط أو رمز لتغيير كلمة المرور.
-    </p>
-
-    <form action="#" method="POST" class="space-y-5">
+    <form id="resetForm" class="space-y-4">
       <div>
         <label class="block text-sm mb-1">البريد الإلكتروني أو رقم الهاتف</label>
-        <input type="text" placeholder="example@gmail.com أو 0550xxxxxx"
+        <input id="contact" type="text" placeholder="example@gmail.com أو +213xxxxxxxxx"
                class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
       </div>
 
+      <!-- reCAPTCHA -->
+      <div id="recaptcha-container" class="my-3"></div>
+
       <button type="submit"
               class="w-full py-2 bg-yellow-400 text-black rounded-lg font-semibold hover:bg-yellow-300 transition">
-        إرسال رابط/رمز الاسترجاع
+        إرسال رمز / رابط التحقق
       </button>
-
-      <p class="text-center text-sm mt-3">
-        <a href="login.html" class="text-yellow-400 hover:underline">العودة إلى تسجيل الدخول</a>
-      </p>
     </form>
+
+    <!-- قسم الرمز وكلمة المرور الجديدة -->
+    <div id="verifySection" class="hidden space-y-4 mt-6">
+      <div>
+        <label class="block text-sm mb-1">رمز التحقق</label>
+        <input id="otp" type="text" placeholder="رمز التحقق المرسل إلى هاتفك"
+               class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
+      </div>
+
+      <div>
+        <label class="block text-sm mb-1">كلمة المرور الجديدة</label>
+        <input id="newPassword" type="password" placeholder="••••••••"
+               class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
+      </div>
+
+      <button id="confirmBtn"
+              class="w-full py-2 bg-yellow-400 text-black rounded-lg font-semibold hover:bg-yellow-300 transition">
+        تأكيد وتحديث كلمة المرور
+      </button>
+    </div>
+
+    <p class="text-center text-sm mt-3">
+      تذكرت كلمة المرور؟ <a href="login.html" class="text-yellow-400 hover:underline">تسجيل الدخول</a>
+    </p>
   </div>
 
-  <!-- Preview Section -->
-  <div class="grid grid-cols-2 sm:grid-cols-3 gap-4 mt-10 max-w-3xl">
-    <div class="bg-white/10 p-4 rounded-xl text-center">
-      <div class="h-24 bg-black/30 rounded-md mb-2 flex items-center justify-center text-xs text-gray-400">صورة المنتج</div>
-      <p class="text-sm font-medium">قرص SSD</p>
-    </div>
-    <div class="bg-white/10 p-4 rounded-xl text-center">
-      <div class="h-24 bg-black/30 rounded-md mb-2 flex items-center justify-center text-xs text-gray-400">صورة المنتج</div>
-      <p class="text-sm font-medium">بطاقة شاشة</p>
-    </div>
-    <div class="bg-white/10 p-4 rounded-xl text-center hidden sm:block">
-      <div class="h-24 bg-black/30 rounded-md mb-2 flex items-center justify-center text-xs text-gray-400">صورة المنتج</div>
-      <p class="text-sm font-medium">سماعة بلوتوث</p>
-    </div>
-  </div>
-
-  <!-- Footer -->
   <footer class="mt-10 text-xs text-gray-400">
     © 2025 Lizfar DZ — كل الحقوق محفوظة
   </footer>
 
+  <!-- Firebase -->
+  <script type="module">
+    import { auth } from "./firebase-config.js";
+    import {
+      sendPasswordResetEmail,
+      RecaptchaVerifier,
+      signInWithPhoneNumber,
+      updatePassword
+    } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
+
+    let confirmationResult;
+
+    const resetForm = document.getElementById("resetForm");
+    const verifySection = document.getElementById("verifySection");
+    const confirmBtn = document.getElementById("confirmBtn");
+
+    // إعداد reCAPTCHA
+    const appVerifier = new RecaptchaVerifier(auth, "recaptcha-container", {
+      size: "invisible",
+      callback: (response) => {
+        console.log("✅ reCAPTCHA verified");
+      }
+    });
+
+    // إرسال الرمز أو رابط إعادة التعيين
+    resetForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const contact = document.getElementById("contact").value.trim();
+
+      if (!contact) return alert("⚠️ الرجاء إدخال البريد الإلكتروني أو رقم الهاتف.");
+
+      try {
+        if (contact.includes("@")) {
+          // ✉️ إعادة تعيين عبر البريد
+          await sendPasswordResetEmail(auth, contact);
+          alert("📩 تم إرسال رابط إعادة تعيين كلمة المرور إلى بريدك الإلكتروني.");
+        } else {
+          // 📱 إرسال OTP للهاتف
+          confirmationResult = await signInWithPhoneNumber(auth, contact, appVerifier);
+          alert("📲 تم إرسال رمز التحقق إلى هاتفك.");
+          verifySection.classList.remove("hidden");
+        }
+      } catch (error) {
+        alert("❌ حدث خطأ: " + error.message);
+      }
+    });
+
+    // تأكيد الرمز وتحديث كلمة المرور
+    confirmBtn.addEventListener("click", async () => {
+      const code = document.getElementById("otp").value.trim();
+      const newPass = document.getElementById("newPassword").value.trim();
+
+      if (!code || !newPass) return alert("⚠️ أدخل الرمز وكلمة المرور الجديدة.");
+
+      try {
+        const result = await confirmationResult.confirm(code);
+        const user = result.user;
+        await updatePassword(user, newPass);
+        alert("✅ تم تحديث كلمة المرور بنجاح!");
+        window.location.href = "login.html";
+      } catch (error) {
+        alert("❌ رمز تحقق غير صالح أو انتهت صلاحيته.");
+      }
+    });
+  </script>
 </body>
 </html>
-
