--- a/signup.html
+++ b/signup.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="ar" dir="rtl">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>إنشاء حساب | Lizfar DZ</title>
+  <title>Sign Up | Lizfar DZ</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -30,79 +30,88 @@
   <!-- Logo -->
   <div class="flex items-center mb-8">
     <div class="w-12 h-12 bg-yellow-400 rounded-lg flex items-center justify-center text-black font-bold text-lg">LZ</div>
-    <h1 class="text-2xl font-semibold mr-3">Lizfar DZ</h1>
+    <h1 class="text-2xl font-semibold ml-3">Lizfar DZ</h1>
   </div>
 
   <!-- Signup Box -->
   <div class="w-full max-w-md bg-white/10 backdrop-blur-sm rounded-2xl p-8 shadow-xl">
-    <h2 class="text-xl font-semibold mb-6 text-center">إنشاء حساب جديد</h2>
+    <h2 class="text-xl font-semibold mb-6 text-center">Create a New Account</h2>
 
     <form id="signupForm" class="space-y-4">
       <div>
-        <label class="block text-sm mb-1">الاسم الكامل</label>
-        <input id="fullname" type="text" placeholder="الاسم الكامل"
+        <label class="block text-sm mb-1">Full Name</label>
+        <input id="fullname" type="text" placeholder="Your full name"
                class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
       </div>
 
       <div>
-        <label class="block text-sm mb-1">البريد الإلكتروني أو رقم الهاتف</label>
-        <input id="contact" type="text" placeholder="example@gmail.com أو +213xxxxxxxxx"
+        <label class="block text-sm mb-1">Email (optional)</label>
+        <input id="email" type="email" placeholder="example@gmail.com"
                class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
       </div>
 
+      <!-- Algerian phone -->
       <div>
-        <label class="block text-sm mb-1">كلمة المرور</label>
+        <label class="block text-sm mb-1">Phone Number</label>
+        <div class="flex">
+          <span class="bg-gray-700 text-white px-3 flex items-center rounded-l-lg border border-gray-600">+213</span>
+          <input id="phone" type="tel" maxlength="9" placeholder="661234567"
+                 class="flex-1 px-4 py-2 rounded-r-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
+        </div>
+        <p class="text-xs text-gray-400 mt-1">Enter your number without the leading zero (e.g., 661234567)</p>
+      </div>
+
+      <div>
+        <label class="block text-sm mb-1">Password</label>
         <input id="password" type="password" placeholder="••••••••"
                class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
       </div>
 
       <div>
-        <label class="block text-sm mb-1">مكان الإقامة (الولاية)</label>
+        <label class="block text-sm mb-1">Wilaya (Province)</label>
         <select id="wilaya" class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
-          <option value="">اختر ولايتك</option>
-          <option>01 - أدرار</option>
-          <option>02 - الشلف</option>
-          <option>16 - الجزائر العاصمة</option>
-          <option>31 - وهران</option>
-          <option>19 - سطيف</option>
-          <option>25 - قسنطينة</option>
-          <option>23 - عنابة</option>
-          <option>18 - جيجل</option>
-          <option>47 - غرداية</option>
-          <option>48 - غليزان</option>
+          <option value="">Select your wilaya</option>
+          <option>01 - Adrar</option>
+          <option>02 - Chlef</option>
+          <option>16 - Algiers</option>
+          <option>31 - Oran</option>
+          <option>19 - Setif</option>
+          <option>25 - Constantine</option>
+          <option>23 - Annaba</option>
+          <option>18 - Jijel</option>
+          <option>47 - Ghardaia</option>
+          <option>48 - Relizane</option>
         </select>
       </div>
 
       <div>
-        <label class="block text-sm mb-1">العمر</label>
-        <input id="age" type="number" min="10" max="99" placeholder="عمرك"
+        <label class="block text-sm mb-1">Age</label>
+        <input id="age" type="number" min="10" max="99" placeholder="Your age"
                class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
       </div>
 
       <!-- reCAPTCHA -->
-      <div id="recaptcha-container" class="my-3"></div>
+      <div id="recaptcha-container" class="mt-3"></div>
 
       <button type="submit"
               class="w-full py-2 bg-yellow-400 text-black rounded-lg font-semibold hover:bg-yellow-300 transition">
-        أنشئ حسابي في Lizfar DZ
+        Create My Account
       </button>
     </form>
 
     <p class="text-center text-sm mt-3">
-      لديك حساب؟ <a href="login.html" class="text-yellow-400 hover:underline">تسجيل الدخول</a>
+      Already have an account? <a href="login.html" class="text-yellow-400 hover:underline">Log in</a>
     </p>
   </div>
 
   <footer class="mt-10 text-xs text-gray-400">
-    © 2025 Lizfar DZ — كل الحقوق محفوظة
+    © 2025 Lizfar DZ — All rights reserved
   </footer>
 
   <!-- Firebase -->
   <script type="module">
     import { auth, db } from "./firebase-config.js";
     import {
-      createUserWithEmailAndPassword,
-      sendEmailVerification,
       RecaptchaVerifier,
       signInWithPhoneNumber
     } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
@@ -110,9 +119,9 @@
 
     const form = document.getElementById("signupForm");
 
-    // إعداد reCAPTCHA
+    // ✅ Visible reCAPTCHA
     const appVerifier = new RecaptchaVerifier(auth, "recaptcha-container", {
-      size: "invisible",
+      size: "normal",
       callback: (response) => {
         console.log("✅ reCAPTCHA verified");
       }
@@ -122,38 +131,40 @@
       e.preventDefault();
 
       const name = form.querySelector("#fullname").value.trim();
-      const contact = form.querySelector("#contact").value.trim();
+      const email = form.querySelector("#email").value.trim();
+      const phoneInput = form.querySelector("#phone").value.trim();
+      const phone = "+213" + phoneInput;
       const password = form.querySelector("#password").value.trim();
       const location = form.querySelector("#wilaya").value;
       const age = form.querySelector("#age").value;
 
-      if (!name || !contact || !password || !location || !age) {
-        alert("⚠️ يرجى ملء جميع الخانات");
+      if (!name || !phoneInput || !password || !location || !age) {
+        alert("⚠️ Please fill all required fields");
         return;
       }
 
       try {
-        if (contact.includes("@")) {
-          // 📧 تسجيل بالبريد الإلكتروني
-          const userCredential = await createUserWithEmailAndPassword(auth, contact, password);
-          const user = userCredential.user;
-          await sendEmailVerification(user);
-          await setDoc(doc(db, "users", user.uid), { name, email: contact, location, age, createdAt: new Date() });
-          alert("✅ تم إنشاء الحساب! تحقق من بريدك الإلكتروني لتفعيل الحساب.");
-          window.location.href = "login.html";
-        } else {
-          // 📱 تسجيل برقم الهاتف
-          const confirmationResult = await signInWithPhoneNumber(auth, contact, appVerifier);
-          const code = prompt("📲 أدخل رمز التحقق المرسل إلى هاتفك:");
-          const result = await confirmationResult.confirm(code);
-          const user = result.user;
+        // 📱 Phone verification
+        const confirmationResult = await signInWithPhoneNumber(auth, phone, appVerifier);
+        const code = prompt("📲 Enter the verification code sent to your phone:");
+        const result = await confirmationResult.confirm(code);
+        const user = result.user;
 
-          await setDoc(doc(db, "users", user.uid), { name, phone: contact, location, age, createdAt: new Date() });
-          alert("🎉 تم إنشاء الحساب بنجاح!");
-          window.location.href = "login.html";
-        }
+        // Save data
+        await setDoc(doc(db, "users", user.uid), {
+          name,
+          email: email || null,
+          phone,
+          location,
+          age,
+          createdAt: new Date()
+        });
+
+        alert("🎉 Account created successfully!");
+        window.location.href = "login.html";
+
       } catch (error) {
-        alert("❌ خطأ: " + error.message);
+        alert("❌ Error: " + error.message);
       }
     });
   </script>
