--- a/signup.html
+++ b/signup.html
@@ -70,17 +70,65 @@
       <div>
         <label class="block text-sm mb-1">Wilaya (Province)</label>
         <select id="wilaya" class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
-          <option value="">Select your wilaya</option>
-          <option>01 - Adrar</option>
-          <option>02 - Chlef</option>
-          <option>16 - Algiers</option>
-          <option>31 - Oran</option>
-          <option>19 - Setif</option>
-          <option>25 - Constantine</option>
-          <option>23 - Annaba</option>
-          <option>18 - Jijel</option>
-          <option>47 - Ghardaia</option>
-          <option>48 - Relizane</option>
+  <option value="">Select your wilaya</option>
+  <option>01 - Adrar</option>
+  <option>02 - Chlef</option>
+  <option>03 - Laghouat</option>
+  <option>04 - Oum El Bouaghi</option>
+  <option>05 - Batna</option>
+  <option>06 - Béjaïa</option>
+  <option>07 - Biskra</option>
+  <option>08 - Béchar</option>
+  <option>09 - Blida</option>
+  <option>10 - Bouira</option>
+  <option>11 - Tamanrasset</option>
+  <option>12 - Tébessa</option>
+  <option>13 - Tlemcen</option>
+  <option>14 - Tiaret</option>
+  <option>15 - Tizi Ouzou</option>
+  <option>16 - Algiers</option>
+  <option>17 - Djelfa</option>
+  <option>18 - Jijel</option>
+  <option>19 - Sétif</option>
+  <option>20 - Saïda</option>
+  <option>21 - Skikda</option>
+  <option>22 - Sidi Bel Abbès</option>
+  <option>23 - Annaba</option>
+  <option>24 - Guelma</option>
+  <option>25 - Constantine</option>
+  <option>26 - Médéa</option>
+  <option>27 - Mostaganem</option>
+  <option>28 - M’Sila</option>
+  <option>29 - Mascara</option>
+  <option>30 - Ouargla</option>
+  <option>31 - Oran</option>
+  <option>32 - El Bayadh</option>
+  <option>33 - Illizi</option>
+  <option>34 - Bordj Bou Arréridj</option>
+  <option>35 - Boumerdès</option>
+  <option>36 - El Tarf</option>
+  <option>37 - Tindouf</option>
+  <option>38 - Tissemsilt</option>
+  <option>39 - El Oued</option>
+  <option>40 - Khenchela</option>
+  <option>41 - Souk Ahras</option>
+  <option>42 - Tipaza</option>
+  <option>43 - Mila</option>
+  <option>44 - Aïn Defla</option>
+  <option>45 - Naâma</option>
+  <option>46 - Aïn Témouchent</option>
+  <option>47 - Ghardaïa</option>
+  <option>48 - Relizane</option>
+  <option>49 - El M'Ghair</option>
+  <option>50 - El Meniaa</option>
+  <option>51 - Ouled Djellal</option>
+  <option>52 - Bordj Baji Mokhtar</option>
+  <option>53 - Béni Abbès</option>
+  <option>54 - Timimoun</option>
+  <option>55 - Touggourt</option>
+  <option>56 - Djanet</option>
+  <option>57 - El Meghaier</option>
+  <option>58 - In Salah</option>
         </select>
       </div>
 
@@ -170,3 +218,4 @@
   </script>
 </body>
 </html>
+
