--- a/signup.html
+++ b/signup.html
@@ -45,20 +45,9 @@
       </div>
 
       <div>
-        <label class="block text-sm mb-1">Email (optional)</label>
+        <label class="block text-sm mb-1">Email</label>
         <input id="email" type="email" placeholder="example@gmail.com"
                class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
-      </div>
-
-      <!-- Algerian phone -->
-      <div>
-        <label class="block text-sm mb-1">Phone Number</label>
-        <div class="flex">
-          <span class="bg-gray-700 text-white px-3 flex items-center rounded-l-lg border border-gray-600">+213</span>
-          <input id="phone" type="tel" maxlength="9" placeholder="661234567"
-                 class="flex-1 px-4 py-2 rounded-r-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
-        </div>
-        <p class="text-xs text-gray-400 mt-1">Enter your number without the leading zero (e.g., 661234567)</p>
       </div>
 
       <div>
@@ -70,65 +59,65 @@
       <div>
         <label class="block text-sm mb-1">Wilaya (Province)</label>
         <select id="wilaya" class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
-  <option value="">Select your wilaya</option>
-  <option>01 - Adrar</option>
-  <option>02 - Chlef</option>
-  <option>03 - Laghouat</option>
-  <option>04 - Oum El Bouaghi</option>
-  <option>05 - Batna</option>
-  <option>06 - Béjaïa</option>
-  <option>07 - Biskra</option>
-  <option>08 - Béchar</option>
-  <option>09 - Blida</option>
-  <option>10 - Bouira</option>
-  <option>11 - Tamanrasset</option>
-  <option>12 - Tébessa</option>
-  <option>13 - Tlemcen</option>
-  <option>14 - Tiaret</option>
-  <option>15 - Tizi Ouzou</option>
-  <option>16 - Algiers</option>
-  <option>17 - Djelfa</option>
-  <option>18 - Jijel</option>
-  <option>19 - Sétif</option>
-  <option>20 - Saïda</option>
-  <option>21 - Skikda</option>
-  <option>22 - Sidi Bel Abbès</option>
-  <option>23 - Annaba</option>
-  <option>24 - Guelma</option>
-  <option>25 - Constantine</option>
-  <option>26 - Médéa</option>
-  <option>27 - Mostaganem</option>
-  <option>28 - M’Sila</option>
-  <option>29 - Mascara</option>
-  <option>30 - Ouargla</option>
-  <option>31 - Oran</option>
-  <option>32 - El Bayadh</option>
-  <option>33 - Illizi</option>
-  <option>34 - Bordj Bou Arréridj</option>
-  <option>35 - Boumerdès</option>
-  <option>36 - El Tarf</option>
-  <option>37 - Tindouf</option>
-  <option>38 - Tissemsilt</option>
-  <option>39 - El Oued</option>
-  <option>40 - Khenchela</option>
-  <option>41 - Souk Ahras</option>
-  <option>42 - Tipaza</option>
-  <option>43 - Mila</option>
-  <option>44 - Aïn Defla</option>
-  <option>45 - Naâma</option>
-  <option>46 - Aïn Témouchent</option>
-  <option>47 - Ghardaïa</option>
-  <option>48 - Relizane</option>
-  <option>49 - El M'Ghair</option>
-  <option>50 - El Meniaa</option>
-  <option>51 - Ouled Djellal</option>
-  <option>52 - Bordj Baji Mokhtar</option>
-  <option>53 - Béni Abbès</option>
-  <option>54 - Timimoun</option>
-  <option>55 - Touggourt</option>
-  <option>56 - Djanet</option>
-  <option>57 - El Meghaier</option>
-  <option>58 - In Salah</option>
+          <option value="">Select your wilaya</option>
+          <option>01 - Adrar</option>
+          <option>02 - Chlef</option>
+          <option>03 - Laghouat</option>
+          <option>04 - Oum El Bouaghi</option>
+          <option>05 - Batna</option>
+          <option>06 - Béjaïa</option>
+          <option>07 - Biskra</option>
+          <option>08 - Béchar</option>
+          <option>09 - Blida</option>
+          <option>10 - Bouira</option>
+          <option>11 - Tamanrasset</option>
+          <option>12 - Tébessa</option>
+          <option>13 - Tlemcen</option>
+          <option>14 - Tiaret</option>
+          <option>15 - Tizi Ouzou</option>
+          <option>16 - Algiers</option>
+          <option>17 - Djelfa</option>
+          <option>18 - Jijel</option>
+          <option>19 - Sétif</option>
+          <option>20 - Saïda</option>
+          <option>21 - Skikda</option>
+          <option>22 - Sidi Bel Abbès</option>
+          <option>23 - Annaba</option>
+          <option>24 - Guelma</option>
+          <option>25 - Constantine</option>
+          <option>26 - Médéa</option>
+          <option>27 - Mostaganem</option>
+          <option>28 - M’Sila</option>
+          <option>29 - Mascara</option>
+          <option>30 - Ouargla</option>
+          <option>31 - Oran</option>
+          <option>32 - El Bayadh</option>
+          <option>33 - Illizi</option>
+          <option>34 - Bordj Bou Arréridj</option>
+          <option>35 - Boumerdès</option>
+          <option>36 - El Tarf</option>
+          <option>37 - Tindouf</option>
+          <option>38 - Tissemsilt</option>
+          <option>39 - El Oued</option>
+          <option>40 - Khenchela</option>
+          <option>41 - Souk Ahras</option>
+          <option>42 - Tipaza</option>
+          <option>43 - Mila</option>
+          <option>44 - Aïn Defla</option>
+          <option>45 - Naâma</option>
+          <option>46 - Aïn Témouchent</option>
+          <option>47 - Ghardaïa</option>
+          <option>48 - Relizane</option>
+          <option>49 - El M'Ghair</option>
+          <option>50 - El Meniaa</option>
+          <option>51 - Ouled Djellal</option>
+          <option>52 - Bordj Baji Mokhtar</option>
+          <option>53 - Béni Abbès</option>
+          <option>54 - Timimoun</option>
+          <option>55 - Touggourt</option>
+          <option>56 - Djanet</option>
+          <option>57 - El Meghaier</option>
+          <option>58 - In Salah</option>
         </select>
       </div>
 
@@ -137,9 +126,6 @@
         <input id="age" type="number" min="10" max="99" placeholder="Your age"
                class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
       </div>
-
-      <!-- reCAPTCHA -->
-      <div id="recaptcha-container" class="mt-3"></div>
 
       <button type="submit"
               class="w-full py-2 bg-yellow-400 text-black rounded-lg font-semibold hover:bg-yellow-300 transition">
@@ -159,50 +145,34 @@
   <!-- Firebase -->
   <script type="module">
     import { auth, db } from "./firebase-config.js";
-    import {
-      RecaptchaVerifier,
-      signInWithPhoneNumber
-    } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
+    import { createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
     import { setDoc, doc } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
 
     const form = document.getElementById("signupForm");
-
-    // ✅ Visible reCAPTCHA
-    const appVerifier = new RecaptchaVerifier(auth, "recaptcha-container", {
-      size: "normal",
-      callback: (response) => {
-        console.log("✅ reCAPTCHA verified");
-      }
-    });
 
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
 
       const name = form.querySelector("#fullname").value.trim();
       const email = form.querySelector("#email").value.trim();
-      const phoneInput = form.querySelector("#phone").value.trim();
-      const phone = "+213" + phoneInput;
       const password = form.querySelector("#password").value.trim();
       const location = form.querySelector("#wilaya").value;
       const age = form.querySelector("#age").value;
 
-      if (!name || !phoneInput || !password || !location || !age) {
+      if (!name || !email || !password || !location || !age) {
         alert("⚠️ Please fill all required fields");
         return;
       }
 
       try {
-        // 📱 Phone verification
-        const confirmationResult = await signInWithPhoneNumber(auth, phone, appVerifier);
-        const code = prompt("📲 Enter the verification code sent to your phone:");
-        const result = await confirmationResult.confirm(code);
-        const user = result.user;
+        // ✉️ Create user with email + password
+        const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+        const user = userCredential.user;
 
-        // Save data
+        // Save user data to Firestore
         await setDoc(doc(db, "users", user.uid), {
           name,
-          email: email || null,
-          phone,
+          email,
           location,
           age,
           createdAt: new Date()
@@ -218,4 +188,3 @@
   </script>
 </body>
 </html>
-
