--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ليزفار DZ — الصفحة الرئيسية</title>
 
-  <!-- Tailwind CSS -->
+  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap');
-    body { font-family: "Cairo", sans-serif; background-color: #0b1220; color:white; }
+    body { font-family: "Cairo", sans-serif; background-color: #0b1220; }
     .bg-tech {
       background-image:
         radial-gradient(circle at 10% 10%, rgba(255,255,255,0.02), transparent 2%),
@@ -21,18 +21,31 @@
     .chev { transition: transform .25s ease; }
     .chev.open { transform: rotate(-90deg); }
     select option { color: black; }
-    .carousel { display:flex; gap:1rem; overflow-x:auto; scroll-behavior:smooth; scrollbar-width:none; }
-    .carousel::-webkit-scrollbar { display:none; }
-    .carousel-item { flex:0 0 250px; background-color: rgba(255,255,255,0.1); border-radius:1rem; transition: transform .3s; }
-    .carousel-item:hover { transform:scale(1.05); }
-    .status-new { color:#22c55e; font-weight:600; font-size:.9rem; margin-right:6px; }
-    .status-used { color:#ef4444; font-weight:600; font-size:.9rem; margin-right:6px; }
-    .star { color:#fbbf24; }
+
+    /* Carousel */
+    .carousel {
+      display: flex;
+      overflow-x: auto;
+      gap: 1rem;
+      scroll-behavior: smooth;
+      scrollbar-width: none;
+    }
+    .carousel::-webkit-scrollbar { display: none; }
+    .carousel-item {
+      flex: 0 0 250px;
+      background-color: rgba(255,255,255,0.1);
+      border-radius: 1rem;
+      overflow: hidden;
+      transition: transform 0.3s ease;
+    }
+    .carousel-item:hover { transform: scale(1.05); }
+    .status-new { color: #22c55e; font-weight: 600; }
+    .status-used { color: #ef4444; font-weight: 600; }
   </style>
 </head>
-<body class="min-h-screen bg-gradient-to-br from-gray-900 via-gray-800 to-black bg-tech">
 
-  <div class="min-h-screen flex">
+<body class="min-h-screen text-white bg-gradient-to-br from-gray-900 via-gray-800 to-black bg-tech">
+  <div class="min-h-screen flex flex-col lg:flex-row">
 
     <!-- Sidebar -->
     <aside class="w-72 bg-gray-900/70 border-r border-white/5 p-4 hidden lg:block">
@@ -44,8 +57,10 @@
         </div>
       </div>
 
+      <!-- Navigation -->
       <nav class="space-y-2 overflow-auto" style="max-height:calc(100vh - 160px);">
         <button data-filter="all" class="w-full text-right side-item px-3 py-2 rounded-md text-sm font-medium">أحدث المنتجات</button>
+
         <!-- PC -->
         <div>
           <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium pc-toggle">
@@ -60,6 +75,9 @@
             <button data-filter="pc-cpu" class="w-full text-right px-3 py-2 rounded-md side-item">معالجات</button>
             <button data-filter="pc-ram" class="w-full text-right px-3 py-2 rounded-md side-item">رامات</button>
             <button data-filter="pc-mobo" class="w-full text-right px-3 py-2 rounded-md side-item">كروت أم</button>
+            <button data-filter="pc-cooler" class="w-full text-right px-3 py-2 rounded-md side-item">مراوح تبريد</button>
+            <button data-filter="pc-storage" class="w-full text-right px-3 py-2 rounded-md side-item">SSD / HDD</button>
+            <button data-filter="pc-psu" class="w-full text-right px-3 py-2 rounded-md side-item">وحدة الطاقة</button>
           </div>
         </div>
 
@@ -77,13 +95,38 @@
           <div class="phone-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
             <button data-filter="phone-samsung" class="w-full text-right px-3 py-2 rounded-md side-item">Samsung</button>
             <button data-filter="phone-xiaomi" class="w-full text-right px-3 py-2 rounded-md side-item">Xiaomi</button>
+            <button data-filter="phone-huawei" class="w-full text-right px-3 py-2 rounded-md side-item">Huawei</button>
+            <button data-filter="phone-oppo" class="w-full text-right px-3 py-2 rounded-md side-item">Oppo</button>
+            <button data-filter="phone-infinix" class="w-full text-right px-3 py-2 rounded-md side-item">Infinix</button>
+            <button data-filter="phone-iphone" class="w-full text-right px-3 py-2 rounded-md side-item">iPhone</button>
           </div>
         </div>
+
+        <!-- Accessories -->
+        <div>
+          <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium acc-toggle">
+            <span>إكسسوارات</span>
+            <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/>
+            </svg>
+          </button>
+          <div class="acc-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
+            <button data-filter="acc-mouse" class="w-full text-right px-3 py-2 rounded-md side-item">فأرة</button>
+            <button data-filter="acc-keyboard" class="w-full text-right px-3 py-2 rounded-md side-item">لوحة مفاتيح</button>
+            <button data-filter="acc-headset" class="w-full text-right px-3 py-2 rounded-md side-item">سماعات</button>
+            <button data-filter="acc-pc" class="w-full text-right px-3 py-2 rounded-md side-item">إكسسوارات الحاسوب</button>
+            <button data-filter="acc-phone" class="w-full text-right px-3 py-2 rounded-md side-item">إكسسوارات الهاتف</button>
+          </div>
+        </div>
+
+        <!-- Screens -->
+        <button data-filter="screens" class="w-full text-right side-item px-3 py-2 rounded-md text-sm font-medium">شاشات</button>
       </nav>
     </aside>
 
     <!-- Main -->
     <main class="flex-1 p-6 lg:pl-8">
+      <!-- Header -->
       <header class="flex items-center justify-between mb-8">
         <h1 class="text-xl font-semibold">مرحبا بك في Lizfar DZ</h1>
         <div class="flex items-center gap-3">
@@ -92,26 +135,118 @@
         </div>
       </header>
 
-      <!-- Carousel -->
-      <section class="mb-12">
-        <h2 class="text-2xl font-semibold mb-4">⭐ منتجات مختارة</h2>
+      <!-- Featured Products Carousel -->
+      <section class="mb-8">
+        <h2 class="text-2xl font-semibold mb-4">منتجات مختارة</h2>
         <div id="featuredCarousel" class="carousel"></div>
       </section>
 
-      <!-- Offers -->
+      <!-- Offers Section -->
       <section>
-        <h2 class="text-2xl font-semibold mb-6">🔥 عروض اليوم</h2>
-        <div id="offers" class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"></div>
+        <h2 class="text-2xl font-semibold mb-4">🔥 عروض اليوم</h2>
+        <div id="offersSection" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+          <!-- المنتجات ستتم إضافتها هنا من Firebase -->
+        </div>
       </section>
 
-      <footer class="mt-10 text-xs text-gray-400 text-center">
+      <footer class="text-xs text-gray-400 mt-12">
         © 2025 Lizfar DZ — كل الحقوق محفوظة
       </footer>
     </main>
   </div>
 
+  <!-- Firebase + Scripts -->
   <script type="module">
-    // Sidebar toggles
+    import { auth, db } from "./firebase-config.js";
+    import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
+    import { collection, getDocs } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
+
+    const featuredCarousel = document.getElementById("featuredCarousel");
+    const offersSection = document.getElementById("offersSection");
+
+    // 🔒 تأكيد تسجيل الدخول (عرض المحتوى حسب الحالة)
+    onAuthStateChanged(auth, (user) => {
+      if (!user) {
+        console.log("المستخدم غير مسجل الدخول");
+        // يمكن عرض زر تسجيل الدخول فقط
+      } else {
+        console.log("المستخدم مسجل الدخول: " + user.email);
+      }
+    });
+
+    // تحميل المنتجات المعتمدة
+    async function loadProducts() {
+      try {
+        const snapshot = await getDocs(collection(db, "approved_products"));
+
+        if (snapshot.empty) {
+          offersSection.innerHTML = "<p class='text-center text-gray-400 col-span-full'>لا توجد عروض حالياً.</p>";
+          return;
+        }
+
+        featuredCarousel.innerHTML = "";
+        offersSection.innerHTML = "";
+
+        snapshot.forEach((docSnap, i) => {
+          const p = docSnap.data();
+          const statusText = p.condition === "new"
+            ? `<span class='status-new'>(جديد)</span>`
+            : `<span class='status-used'>(مستعمل - ${p.usageDuration || "غير محدد"})</span>`;
+          const ratingStars = "⭐".repeat(p.rating || 4);
+
+          // بطاقة العرض في عروض اليوم
+          const card = `
+            <div class="bg-white/10 rounded-2xl overflow-hidden shadow-lg hover:scale-105 transition transform">
+              <img src="${p.image1 || './assets/default-product.jpg'}" alt="${p.name}" class="w-full h-48 object-cover">
+              <div class="p-4">
+                <h3 class="text-lg font-semibold mb-1 flex items-center">${p.name} ${statusText}</h3>
+                <p class="text-sm text-gray-300 mb-2 truncate">${p.desc}</p>
+                <div class="flex items-center justify-between">
+                  <span class="text-yellow-400 font-bold">${p.price} دج</span>
+                  <span class="text-sm">${ratingStars}</span>
+                </div>
+                <a href="https://wa.me/${p.whatsapp}" target="_blank"
+                   class="block mt-3 text-center bg-green-500 hover:bg-green-600 text-white py-2 rounded-lg transition">
+                   💬 تواصل عبر واتساب
+                </a>
+              </div>
+            </div>
+          `;
+          offersSection.insertAdjacentHTML("beforeend", card);
+
+          // إضافة أول 6 منتجات للسلايدر
+          if (i < 6) {
+            featuredCarousel.insertAdjacentHTML("beforeend", `
+              <div class="carousel-item">
+                <img src="${p.image1 || './assets/default-product.jpg'}" class="w-full h-40 object-cover" alt="${p.name}">
+                <div class="p-3">
+                  <h3 class="text-sm font-semibold mb-1">${p.name} ${statusText}</h3>
+                  <p class="text-yellow-400 font-bold">${p.price} دج</p>
+                </div>
+              </div>
+            `);
+          }
+        });
+      } catch (err) {
+        console.error("خطأ في تحميل المنتجات: ", err);
+      }
+    }
+
+    // 🔁 حركة تلقائية للسلايدر
+    function autoScrollCarousel() {
+      const scrollAmount = 1;
+      setInterval(() => {
+        featuredCarousel.scrollLeft += scrollAmount;
+        if (featuredCarousel.scrollLeft >= featuredCarousel.scrollWidth - featuredCarousel.clientWidth) {
+          featuredCarousel.scrollLeft = 0;
+        }
+      }, 30);
+    }
+
+    await loadProducts();
+    autoScrollCarousel();
+
+    // تفعيل القوائم الفرعية
     const toggle = (btnClass, subClass) => {
       const btn = document.querySelector(btnClass);
       const sub = document.querySelector(subClass);
@@ -123,30 +258,7 @@
     };
     toggle('.pc-toggle', '.pc-submenu');
     toggle('.phone-toggle', '.phone-submenu');
-
-    // Firebase products load
-    import { db } from "./firebase-config.js";
-    import { collection, getDocs } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
-
-    const offersSection = document.getElementById("offers");
-    const featuredCarousel = document.getElementById("featuredCarousel");
-
-    async function loadProducts() {
-      const snapshot = await getDocs(collection(db, "approved_products"));
-      offersSection.innerHTML = "";
-      featuredCarousel.innerHTML = "";
-
-      if (snapshot.empty) {
-        offersSection.innerHTML = "<p class='text-center text-gray-400 col-span-full'>لا توجد عروض حالياً.</p>";
-        return;
-      }
-
-      snapshot.forEach((docSnap, i) => {
-        const p = docSnap.data();
-        const statusText = p.condition === "new"
-          ? `<span class='status-new'>(جديد)</span>`
-          : `<span class='status-used'>(مستعمل - ${p.usageDuration})</span>`;
-        const ratingStars = "⭐".repeat(p.rating || 4);
-
-        const card = `
-          <div class="bg-white/10 rounded-2xl
+    toggle('.acc-toggle', '.acc-submenu');
+  </script>
+</body>
+</html>
